<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_or_try"
        android:layout_gravity="center"
        android:textSize="24sp"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/title"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="text"
        android:id="@+id/newTitle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/description"
        android:textSize="18sp"
        android:inputType="text"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:id="@+id/newDesc"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        tools:ignore="RtlHardcoded">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:background="@drawable/custom_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:id="@+id/ok"
        android:background="@drawable/custom_button"/>

    </LinearLayout>

</LinearLayout>